--- a/manuscript.html
+++ b/manuscript.html
@@ -53,9 +53,9 @@
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/f34bf724c827514580e9b58630ca9540cd6cd761/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/f34bf724c827514580e9b58630ca9540cd6cd761/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/f34bf724c827514580e9b58630ca9540cd6cd761/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/0b1da48972e27b24def4025f02f1773424dfe092/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/0b1da48972e27b24def4025f02f1773424dfe092/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/0b1da48972e27b24def4025f02f1773424dfe092/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -69,9 +69,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/f34bf724c827514580e9b58630ca9540cd6cd761/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/0b1da48972e27b24def4025f02f1773424dfe092/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/f34bf724c827514580e9b58630ca9540cd6cd761">uiceds/cee-492-term-project-fall-2022-jakt@f34bf72</a>
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/0b1da48972e27b24def4025f02f1773424dfe092">uiceds/cee-492-term-project-fall-2022-jakt@0b1da48</a>
 on October 28, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -105,10 +105,7 @@ Department of CEE, University of Illinois Urbana Champaign
 <p>A nationwide dataset of road construction and closure events, including data from 49 US states is chosen for the project. The roadwork included in this dataset’s construction events ranges from minor paving repairs to significant undertakings that might take months to complete. Several APIs that provide streaming traffic incident (or event) data are used to collect the data between January 2016 and December 2021. These APIs transmit traffic information gathered by several organizations, including the US and state departments of transportation, law enforcement organizations, traffic cameras, and traffic sensors embedded in the road networks. The number of construction and shutdown records in this dataset currently stands at roughly 6.2 million.</p>
 <p>In general, this dataset can be used for a wide range of applications, including the prediction of short- and long-term road construction, the prediction of road closures, the study of the life cycle of road construction, the development of insights to help city planners choose construction sites wisely with the most negligible negative impact on traffic flow, and the investigation of the influence of precipitation or other environmental stimuli on the need for road work. The dataset is being updated on an annual basis. The data will be obtained from US Road Construction and Closures (2016 - 2021), Kaggle, and it is available in CSV format. Presently, the dataset contains 6,170,627 observations comprising of features like Construction severity, Latitude and longitude, Precipitation, Traffic signal and many such taking a total of 47 columns. Table 1 elaborates the specifics of this data set. Using this dataset, a machine learning model will be developed to predict the duration of a new road construction project as short, medium, or long term, given inputs of pertinent features derived from Table 1. The developed model will be cross validated in four (4) folds, to be made suitable for accurate and robust predictions. With this model, it is envisaged that contractors, city planners and relevant authorities can categorize potential road construction projects based on expected average weather conditions, for better planning and project delivery.</p>
 <p>To achieve this goal, data wrangling will be performed. The essential data frames for the study will be extracted from the original dataset followed by exploratory data analysis (EDA). EDA will enable us to derive insights by forming a pattern for better visualization and exploration. Based on this, pertinent features will be realized to build a classification model that accurately predicts the duration of a road construction project.</p>
-<div id="tbl:features" class="tablenos">
-<table id="tbl:features">
-<caption><span>Table 1:</span> Description of Undertaking Dataset
-</caption>
+<table>
 <colgroup>
 <col style="width: 25%" />
 <col style="width: 74%" />
@@ -202,33 +199,29 @@ Department of CEE, University of Illinois Urbana Champaign
 </tr>
 </tbody>
 </table>
-</div>
-<p>2.0 Data Wrangling and Exploratory Data Analysis
+<p><span class="semibold">Table: Description of Undertaking Dataset</span>
+{#tbl:features}</p>
+<p><span class="semibold">2.0 Data Wrangling and Exploratory Data Analysis</span>
 The data obtained from Kaggle is highly generic and unstructured, hence unsuited for analysis in its raw form. To achieve the goals of our design, an initial data wrangling was performed to put the data in the right format followed by EDA to determine pertinent features that affect road construction duration in USA.</p>
-<p>2.1.1 Data Cleaning
+<p><span class="semibold">2.1.1 Data Cleaning</span>
 The csv file obtained from Kaggle was composed of over 6.1 million observations, which would have been computationally expensive to work with. To reduce the burden of computational time, while still retaining a good representation of the data, 1,048,575 observations (15% original data) were randomly selected with R. The data was converted to a data frame format suitable for analysis with Julia. However, some features were discovered with missing entries, which would be adversarial to subsequent codes and functions. To resolve this problem, a package in Julia (Missing package) was leveraged to filter out all observations with one or more missing entries. This process further reduced the size of the dataset to 482,849. Then, an intuitive search was made of pertinent features that could affect road construction duration, like the length of the road extent affected by the construction (denoted by “Distance” in miles), the total amount of precipitation, and other environmental factors. Although some of these pertinent features were discovered, most of the entries of each observation of these features were not in the format suitable for visualization (which requires real numbers) i.e., some variables were Strings, or Boolean values, hence the need to clean the data. Table 2 below shows a segment of the dataset after it has been roughly sampled, and missing entries removed, while Table 3 shows the summary of the dataset.</p>
-<p>Table 2: Dataset of road construction projects in USA</p>
-<div id="fig:-image" class="fignos">
+<p><span class="semibold">Table 2: Dataset of road construction projects in USA</span></p>
+<p>src=“C:\123446.png”
+<img src="123446.png" title="Wide image" id="fig:-image" alt="A square image at actual size and with a bottom caption. Loaded from the latest version of image on GitHub." /></p>
 <figure>
-<img src="123446.png" alt="Figure 1: A square image at actual size and with a bottom caption. Loaded from the latest version of image on GitHub." /><figcaption aria-hidden="true"><span>Figure 1:</span> <strong>A square image at actual size and with a bottom caption.</strong>
-Loaded from the latest version of image on GitHub.</figcaption>
+<img src="C:\Users\shahk\Downloads\123446.png" alt="alt text" /><figcaption aria-hidden="true">alt text</figcaption>
 </figure>
-</div>
-<p>Table 3: A summary of pertinent information of road construction projects in USA
-Figure ??
-Image 2.png</p>
-<p>2.2 Wrangling and feature derivation</p>
-<p>It can be seen from Table 2 that the project duration is not explicitly stated. Hence, the project duration was defined to be the difference between the start and end time, after preprocessing the String data entries to a Date format. Table 4 shows the resulting features after preprocessing.</p>
-<p>Table 4: Derivation of project duration from raw data
-Figure ??
-image 3.png</p>
-<p>Figure ??
-image 4.png</p>
+<p align="center">
+<img src="C:\Users\shahk\Downloads\123446.png" width="350" title="hover text">
+<img src="C:\Users\shahk\Downloads\123446.png" width="350" alt="accessibility text">
+</p>
+<p><span class="semibold">Table 3: A summary of pertinent information of road construction projects in USA</span></p>
+<p><span class="semibold">2.2 Wrangling and feature derivation</span>
+It can be seen from Table 2 that the project duration is not explicitly stated. Hence, the project duration was defined to be the difference between the start and end time, after preprocessing the String data entries to a Date format. Table 4 shows the resulting features after preprocessing.</p>
+<p><span class="semibold">Table 4: Derivation of project duration from raw data</span></p>
 <p>Having computed the project durations as shown in Table 4, some anomalies were detected in the data. The 2nd and 3rd observations show that about 0.43mi and 0.19mi (692m and 305m) of road span was constructed in 1day respectively, whereas about 0.03mi (or 48m) was constructed in 8days as shown in the 4th entry which is unrealistic. To resolve this, a further investigation was done on the narrative of the dataset from Kaggle, and it was deduced that some of the observations were just minor repair works on existing roads (which would not take a long time irrespective of the road span) while others were new construction projects which takes longer to complete. Unfortunately, there exist no feature in the dataset that reveals if an observation was a minor repair task or a major construction task. To circumvent this, observations corresponding to project durations less than 50 days were filtered out, resulting in a dataset of 43,134 observations significantly dominated by new road construction projects or at least projects lasting longer than 50days. Furthermore, three (3) categories of projects durations were designated as short-, medium- and long-term new road construction projects. A short-term new road construction project is defined as one lasting less than 100 days, while a medium-term project lasts between 100-300 days, and a long-term project lasts longer the 300 days. Table 5 shows the resulting data after grouping into the specified classes.</p>
-<p>Table 5: Dataset for new road construction projects in US, or projects exceeding 50days of duration</p>
-<p>Figure ??
-image 5.png</p>
-<p>2.2.1 Feature detection and EDA</p>
+<p><span class="semibold">Table 5: Dataset for new road construction projects in US, or projects exceeding 50days of duration</span></p>
+<p><span class="semibold">2.2.1 Feature detection and EDA</span></p>
 <p>The resulting dataset as presented in Table 5, was processed to reveal key features. A rough guess was made that the numeric features quantifying environmental conditions like temperature, humidity, precipitation, wind speed, and pressure together with the road construction span or “Distance” affects the proje t duration. This can be seen from the histogram plots of these features, as there exit a considerable spread in their distributions. It was further assumed that the average amount of these quantities (e.g., Temperature) was recorded during the entire project duration, as this information was not explicitly stated in the dataset description. Thus, given the expected or average environmental conditions, and the span or extent of the road construction, the developed model is expected to predict the class of the completion time of the project as short, medium or long term. Table 6 shows the summary of the initial features selected for the development of the model.</p>
 <p>An indispensable aspect of EDA is to detect multicollinearity and prevent confounding in the modeling. Julia’s “Statistics” package was leveraged to compute and plot the correlation between all the independent (selected features) and the dependent variable (project duration). This plot not only enabled discovery of statistically related features, but also enabled realization of features that are pertinent to predicting the dependent variable. The figures below show the correlation plots for the selected features.</p>
 <p>The “Combinatorics” package in Julia was leveraged to create three (3) combinations of all features plus the dependent variable in order to generate the correlation plots that enabled the determination of the most relevant statistical features. A total of 56 combinations were generated and plotted in Julia, but due to space constraint, only some of the plots are presented in the figures above. The code snippet below illustrates how the figures above were generated.</p>
