--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -53,9 +53,9 @@
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/0b1da48972e27b24def4025f02f1773424dfe092/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/0b1da48972e27b24def4025f02f1773424dfe092/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/0b1da48972e27b24def4025f02f1773424dfe092/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/c3acf07b08b1add5ee7f8a2e0ee424d3096c4a91/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/c3acf07b08b1add5ee7f8a2e0ee424d3096c4a91/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/c3acf07b08b1add5ee7f8a2e0ee424d3096c4a91/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -69,9 +69,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/0b1da48972e27b24def4025f02f1773424dfe092/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/c3acf07b08b1add5ee7f8a2e0ee424d3096c4a91/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/0b1da48972e27b24def4025f02f1773424dfe092">uiceds/cee-492-term-project-fall-2022-jakt@0b1da48</a>
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/c3acf07b08b1add5ee7f8a2e0ee424d3096c4a91">uiceds/cee-492-term-project-fall-2022-jakt@c3acf07</a>
 on October 28, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -206,14 +206,14 @@ The data obtained from Kaggle is highly generic and unstructured, hence unsuited
 <p><span class="semibold">2.1.1 Data Cleaning</span>
 The csv file obtained from Kaggle was composed of over 6.1 million observations, which would have been computationally expensive to work with. To reduce the burden of computational time, while still retaining a good representation of the data, 1,048,575 observations (15% original data) were randomly selected with R. The data was converted to a data frame format suitable for analysis with Julia. However, some features were discovered with missing entries, which would be adversarial to subsequent codes and functions. To resolve this problem, a package in Julia (Missing package) was leveraged to filter out all observations with one or more missing entries. This process further reduced the size of the dataset to 482,849. Then, an intuitive search was made of pertinent features that could affect road construction duration, like the length of the road extent affected by the construction (denoted by “Distance” in miles), the total amount of precipitation, and other environmental factors. Although some of these pertinent features were discovered, most of the entries of each observation of these features were not in the format suitable for visualization (which requires real numbers) i.e., some variables were Strings, or Boolean values, hence the need to clean the data. Table 2 below shows a segment of the dataset after it has been roughly sampled, and missing entries removed, while Table 3 shows the summary of the dataset.</p>
 <p><span class="semibold">Table 2: Dataset of road construction projects in USA</span></p>
-<p>src=“C:\123446.png”
-<img src="123446.png" title="Wide image" id="fig:-image" alt="A square image at actual size and with a bottom caption. Loaded from the latest version of image on GitHub." /></p>
+<p>src=“https://pixabay.com/photos/tree-cat-silhouette-moon-full-moon-736877/”
+<img src="https://pixabay.com/photos/tree-cat-silhouette-moon-full-moon-736877/" title="Wide image" id="fig:-image" alt="A square image at actual size and with a bottom caption. Loaded from the latest version of image on GitHub." /></p>
 <figure>
 <img src="C:\Users\shahk\Downloads\123446.png" alt="alt text" /><figcaption aria-hidden="true">alt text</figcaption>
 </figure>
 <p align="center">
-<img src="C:\Users\shahk\Downloads\123446.png" width="350" title="hover text">
-<img src="C:\Users\shahk\Downloads\123446.png" width="350" alt="accessibility text">
+<img src="https://pixabay.com/photos/tree-cat-silhouette-moon-full-moon-736877/" width="350" title="hover text">
+<img src="https://pixabay.com/photos/tree-cat-silhouette-moon-full-moon-736877/" width="350" alt="accessibility text">
 </p>
 <p><span class="semibold">Table 3: A summary of pertinent information of road construction projects in USA</span></p>
 <p><span class="semibold">2.2 Wrangling and feature derivation</span>
