--- a/manuscript.html
+++ b/manuscript.html
@@ -53,9 +53,9 @@
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/09ddf525416e41b1e23bcecd4f2c37ca48d38057/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/09ddf525416e41b1e23bcecd4f2c37ca48d38057/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/09ddf525416e41b1e23bcecd4f2c37ca48d38057/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/09189f3338637fd93e880d9814f444ad3374bc8f/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/09189f3338637fd93e880d9814f444ad3374bc8f/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/09189f3338637fd93e880d9814f444ad3374bc8f/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -69,9 +69,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/09ddf525416e41b1e23bcecd4f2c37ca48d38057/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/09189f3338637fd93e880d9814f444ad3374bc8f/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/09ddf525416e41b1e23bcecd4f2c37ca48d38057">uiceds/cee-492-term-project-fall-2022-jakt@09ddf52</a>
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/09189f3338637fd93e880d9814f444ad3374bc8f">uiceds/cee-492-term-project-fall-2022-jakt@09189f3</a>
 on October 28, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -216,6 +216,10 @@ The csv file obtained from Kaggle was composed of over 6.1 million observations,
 </figure>
 <p>image: url(“C:5.png”)</p>
 <p>=“images5.png”&gt;</p>
+<p>’‘’img src=“Image/Image 5.PNG” /&gt;’’’</p>
+<p>’‘’img src=’Image/Image 5.PNG’ /&gt;’’’</p>
+<p>“img src=”Image/Image 5.PNG” /&gt;”</p>
+<p>“img src=‘Image/Image 5.PNG’ /&gt;”</p>
 <p><span class="semibold">Table 3: A summary of pertinent information of road construction projects in USA</span></p>
 <p><span class="semibold">2.2 Wrangling and feature derivation</span>
 It can be seen from Table 2 that the project duration is not explicitly stated. Hence, the project duration was defined to be the difference between the start and end time, after preprocessing the String data entries to a Date format. Table 4 shows the resulting features after preprocessing.</p>
